# lattice

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo-1-authorization.md  demo-2-order-lifecycle.md  demo-3-subscription-billing.md  implementation-experiment.md  lattice-overview.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: minimal_valid.yaml  order_lifecycle.yaml
examples/invalid/: broken_reference.yaml  orphan_entity.yaml  unreachable_state.yaml
lattice/: __init__.py  cli.py
lattice/graph/: __init__.py  builder.py  model_graph.py  node_types.py
lattice/output/: __init__.py  formatter.py
lattice/schema/: __init__.py  errors.py  loader.py  models.py
lattice/semantic/: __init__.py  analyzer.py  errors.py  parser.py  prompts.py
lattice/test_generator/: __init__.py  formatter.py  generator.py  invariants.py  models.py  path_finder.py  state_machine.py
lattice/validators/: __init__.py  base.py  orphan_detector.py  reachability.py  reference_integrity.py  runner.py
tests/: __init__.py  conftest.py
tests/graph/: __init__.py  test_builder.py  test_model_graph.py
tests/integration/: test_cli.py  test_cli_generate.py
tests/schema/: __init__.py  test_loader.py  test_models.py
tests/semantic/: __init__.py  test_analyzer.py  test_cli_analyze.py  test_parser.py  test_prompts.py
tests/test_generator/: __init__.py  test_formatter.py  test_generator.py  test_invariants.py  test_models.py  test_path_finder.py  test_state_machine.py
(+4 files in other folders)
